<resources>
    <string name="app_name">MiPT03</string>
    <string name="tvInput_default">0</string>
    <string name="calc_clear">C</string>
    <string name="calc_clear_all">CE</string>
    <string name="calc_multiply">x</string>
    <string name="calc_divide">/</string>
    <string name="calc_minus">-</string>
    <string name="calc_plus">+</string>
    <string name="calc_sqrt">√</string>
    <string name="calc_dot">.</string>
    <string name="calc_equals">=</string>
    <string name="calc_7">7</string>
    <string name="calc_8">8</string>
    <string name="calc_9">9</string>
    <string name="calc_4">4</string>
    <string name="calc_5">5</string>
    <string name="calc_6">6</string>
    <string name="calc_1">1</string>
    <string name="calc_2">2</string>
    <string name="calc_3">3</string>
    <string name="calc_0">0</string>
</resources>